askPrompts function can get user input of name, id, and email, for any employee type

--- a/team.html
+++ b/team.html
@@ -30,13 +30,13 @@
       <div class="col-sm-4">
         <div class="card" style="width: 20rem">
           <div class="card-header bg-primary text-light p-3">
-            <h2>af</h2>
-            <h3>Engineer</h3>
+            <h2>bill</h2>
+            <h3>Title</h3>
           </div>
           <ul class="list-group list-group-flush bg-">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">ID: 23094\</li>
+            <li class="list-group-item">email: @ma </li>
+            <li class="list-group-item">Office number: </li>
           </ul>
         </div>
       </div>
