trying to update to correct version

--- a/team.html
+++ b/team.html
@@ -16,30 +16,119 @@
     <header>
       <h1 class="text-center bg-danger text-light p-5">My Team</h1>
     </header>
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card" style="width: 20rem">
-          <div class="card-header">Person Name</div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-4">
+      <div class="row">
+     <div class="col-sm-4">
         <div class="card" style="width: 20rem">
           <div class="card-header bg-primary text-light p-3">
-            <h2>bill</h2>
-            <h3>Title</h3>
+            <h2>bob</h2>
+            <h3>Manager</h3>
           </div>
           <ul class="list-group list-group-flush bg-">
-            <li class="list-group-item">ID: 23094\</li>
-            <li class="list-group-item">email: @ma </li>
-            <li class="list-group-item">Office number: </li>
+            <li class="list-group-item">ID: 32</li>
+            <li class="list-group-item">email: 4 </li>
+            <li class="list-group-item">Office number: 432</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>nir</h2>
+            <h3>Manager</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">email: @intern </li>
+            <li class="list-group-item">Office number: undefined</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>neer</h2>
+            <h3>Manager</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 08</li>
+            <li class="list-group-item">email: @engine </li>
+            <li class="list-group-item">Office number: undefined</li>
+          </ul>
+        </div>
+      </div> 
+     <div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>bob</h2>
+            <h3>Engineer</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 32</li>
+            <li class="list-group-item">email: 4 </li>
+            <li class="list-group-item">github: undefined</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>nir</h2>
+            <h3>Engineer</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">email: @intern </li>
+            <li class="list-group-item">github: undefined</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>neer</h2>
+            <h3>Engineer</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 08</li>
+            <li class="list-group-item">email: @engine </li>
+            <li class="list-group-item">github: bfdlsk</li>
           </ul>
         </div>
       </div>
-    </div>
+     <div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>bob</h2>
+            <h3>Intern</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 32</li>
+            <li class="list-group-item">email: 4 </li>
+            <li class="list-group-item">school: undefined</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>nir</h2>
+            <h3>Intern</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">email: @intern </li>
+            <li class="list-group-item">school: ucsd</li>
+          </ul>
+        </div>
+      </div>,<div class="col-sm-4">
+        <div class="card" style="width: 20rem">
+          <div class="card-header bg-primary text-light p-3">
+            <h2>neer</h2>
+            <h3>Intern</h3>
+          </div>
+          <ul class="list-group list-group-flush bg-">
+            <li class="list-group-item">ID: 08</li>
+            <li class="list-group-item">email: @engine </li>
+            <li class="list-group-item">school: undefined</li>
+          </ul>
+        </div>
+      </div>
+     
+     </div>
   </body>
 </html
